--- a/docs/3/modules/ircv3_sts.yml
+++ b/docs/3/modules/ircv3_sts.yml
@@ -65,4 +65,4 @@ configuration:
 client_caps:
 - name: '[sts](https://ircv3.net/specs/extensions/sts.html)'
   description: |-
-    Defines a mechanism for clients to upgrade plaintext IRC connections to SSL (TLS).
+    Defines a mechanism for clients to upgrade plaintext IRC connections to TLS (SSL).
