--- a/docs/3/modules/websocket.yml
+++ b/docs/3/modules/websocket.yml
@@ -71,6 +71,6 @@ special_notes: |-
    - HTTP 501 &mdash; Your WebSocket implementation has not sent the required `Sec-WebSocket-Key` header.
    - HTTP 503 &mdash; You do not have [the sha1 module](/3/modules/sha1) loaded.
 
-  If you add an encrypted WebSocket listener you should create a custom SSL profile that has `requestclientcert="no"` set. This is required to allow connections to your server using Google Chrome.
+  If you add an encrypted WebSocket listener you should create a custom TLS (SSL) profile that has `requestclientcert="no"` set. This is required to allow connections to your server using Google Chrome.
 
   Some reverse proxy providers (e.g. Cloudflare) drop idle WebSocket connections which can cause problems with this module. It is recommended that you avoid these providers.
