--- a/docs/3/modules/chanhistory.yml
+++ b/docs/3/modules/chanhistory.yml
@@ -27,7 +27,9 @@ configuration:
     default: 50
     description: |-
       The maximum number of lines of history that a channel can keep.
-  - name: prefixmsg
+  - name:
+      prefixmsg: since 3.5.0
+      notice: 3.0.0 to 3.4.0
     type: Boolean
     required: false
     default: 'Yes'
