--- a/docs/3/commands/_die.yml
+++ b/docs/3/commands/_die.yml
@@ -1,10 +1,9 @@
 name: DIE
+oper_only: true
 syntax: >-
   <server>
 description: |-
   Shuts down the local server. The `<server>` parameter MUST match the name of the local server.
-
-  This command is only usable by server operators with DIE in one of their `<class>` blocks.
 example:
 - description: |-
     Shuts down the local server
