--- a/docs/3/commands/_loadmodule.yml
+++ b/docs/3/commands/_loadmodule.yml
@@ -1,10 +1,9 @@
 name: LOADMODULE
+oper_only: true
 syntax: >-
   <module>
 description: |-
   Loads the specified module on the local server.
-
-  This command is only usable by server operators with LOADMODULE in one of their `<class>` blocks.
 example:
 - description: |-
     Loads the botmode module
