--- a/docs/3/commands/_qline.yml
+++ b/docs/3/commands/_qline.yml
@@ -1,12 +1,11 @@
 name: QLINE
+oper_only: true
 syntax: >-
   <nick> [<duration> <reason>]
 description: |-
   If `<duration>` and `<reason>` are specified then prevents a nickname from being used. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the Q-line will be permanent.
 
   Otherwise, if just `<nick>` is specified, removes a reservation on a nickname.
-
-  This command is only usable by server operators with QLINE in one of their `<class>` blocks.
 example:
 - description: |-
     Q-lines Adam for one day with the reason "Testing"
