--- a/docs/3/commands/_reloadmodule.yml
+++ b/docs/3/commands/_reloadmodule.yml
@@ -1,10 +1,9 @@
 name: RELOADMODULE
+oper_only: true
 syntax: >-
   <module>
 description: |-
   Reloads the specified module on the local server.
-
-  This command is only usable by server operators with RELOADMODULE in one of their `<class>` blocks.
 example:
 - description: |-
     Reloads the alias module
