--- a/docs/3/commands/_restart.yml
+++ b/docs/3/commands/_restart.yml
@@ -1,10 +1,9 @@
 name: RESTART
+oper_only: true
 syntax: >-
   <server>
 description: |-
   Restarts the local server. The `<server>` parameter MUST match the name of the local server.
-
-  This command is only usable by server operators with RESTART in one of their `<class>` blocks.
 example:
 - description: |-
     Restarts the local server
