--- a/docs/3/modules/alltime.yml
+++ b/docs/3/modules/alltime.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: ALLTIME
   param_count: 0
+  oper_only: true
   syntax: null
   description: |-
     Causes all servers on the network to respond with the current UTC time on the server.
