--- a/docs/3/modules/chgident.yml
+++ b/docs/3/modules/chgident.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: CHGIDENT
   param_count: 2
+  oper_only: true
   syntax: <nickname> <username>
   description: |-
     Changes the username (ident) of &lt;nickname&gt; to &lt;username&gt;.
