--- a/docs/3/modules/opermotd.yml
+++ b/docs/3/modules/opermotd.yml
@@ -56,6 +56,7 @@ configuration:
 commands:
 - name: OPERMOTD
   param_count: 0-1
+  oper_only: true
   syntax: '[<server>]'
   description: |-
     Requests the server operator message of the day for &lt;server&gt;.
