--- a/docs/3/modules/sakick.yml
+++ b/docs/3/modules/sakick.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: SAKICK
   param_count: 2-3
+  oper_only: true
   syntax: <channel> <nick> [<reason>]
   description: |-
     Kicks &lt;nick&gt; from &lt;channel&gt; optionally with the reason specified in &lt;reason&gt;.
