--- a/docs/3/modules/setident.yml
+++ b/docs/3/modules/setident.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: SETIDENT
   param_count: 1
+  oper_only: true
   syntax: <username>
   description: |-
     Changes the username (ident) of the user to &lt;username&gt;.
