--- a/docs/3/modules/setidle.yml
+++ b/docs/3/modules/setidle.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: SETIDLE
   param_count: 1
+  oper_only: true
   syntax: <duration>
   description: |-
     Changes the idle time of the user to &lt;duration&gt;.
