--- a/docs/3/modules/svshold.yml
+++ b/docs/3/modules/svshold.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: SVSHOLD
   param_count: 1-3
+  oper_only: true
   syntax: <nickname> [<duration> [<reason>]]
   description: |-
     Allows services to add and remove nickname reservations.
