--- a/docs/3/modules/tline.yml
+++ b/docs/3/modules/tline.yml
@@ -6,6 +6,7 @@ description: |-
 commands:
 - name: TLINE
   param_count: 1
+  oper_only: true
   syntax: <pattern>
   description: |-
     Determines how many users would be affected by an X-line on &lt;pattern&gt;.
