--- a/docs/3/commands/_whowas.yml
+++ b/docs/3/commands/_whowas.yml
@@ -1,8 +1,10 @@
 name: WHOWAS
 syntax: >-
-  <nick>
+  <nick> [<count>]
 description: |-
   Requests information about a user who was previously connected with the specified nick.
+
+   If <count> is given, only return the <count> most recent entries.
 example:
 - description: |-
     Requests information about who previously used the nick Adam
