--- a/docs/3/modules/dnsbl.yml
+++ b/docs/3/modules/dnsbl.yml
@@ -158,6 +158,7 @@ configuration:
            domain="torexit.dan.me.uk"
            type="record"
            records="100"
+           timeout="10s"
            action="ZLINE"
            duration="7d"
            reason="Tor exit nodes are not allowed on this network. See https://metrics.torproject.org/rs.html#search/%ip% for more information.">
