--- a/docs/3/configuration/_files.yml
+++ b/docs/3/configuration/_files.yml
@@ -11,7 +11,13 @@ attributes:
   description: |-
     A file used as the message of the day, i.e. shown to users when they connect or use the `/MOTD` command.
 details: |-
-  All paths are relative to InspIRCd's configuration directory. This is `/etc/inspircd` if using our binary packages and defaults to `./run/conf` if you have built from source. They are **NOT** relative to the current config file.
+  All paths are relative to InspIRCd's configuration directory. This is:
+
+    - `/etc/inspircd` if using our UNIX binary packages.
+    - `C:\Program Files\InspIRCd\conf` if using our Windows binary package.
+    - `[ROOT]/run/conf` if you have built in your home directory.
+
+  File paths are **NOT** relative to the current config file.
 example: |-
   Use the file `examples/motd.txt.example` as the message of the day:
 
